--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.3",
+    "express-fileupload": "^1.3.1",
     "express-jwt": "^6.1.1",
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.10"
+    "mongoose": "^6.2.10",
+    "uuid": "^8.3.2"
   }
 }
